Fix: Unread notification dot aligned (#11658)

--- a/res/css/views/rooms/_TopUnreadMessagesBar.pcss
+++ b/res/css/views/rooms/_TopUnreadMessagesBar.pcss
@@ -28,7 +28,7 @@ limitations under the License.
     content: "";
     position: absolute;
     top: -8px;
-    left: 10.5px;
+    left: 11px;
     width: 4px;
     height: 4px;
     border-radius: 16px;
